Implementando uso de propiedades en clases de configuracion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=8081
 server.servlet.context-path=/app
+
+value.name = Erubiel
+value.lastname = Apodaca
+value.random = ${random.value}
