implementando propiedades y clases POJO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.servlet.context-path=/app
 value.name = Erubiel
 value.lastname = Apodaca
 value.random = ${random.value}
+
+user.email = jesuserubiel.apodaca@gmail.com
+user.password = 123abc
+user.age = 32
