--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ value.random = ${random.value}
 user.email = jesuserubiel.apodaca@gmail.com
 user.password = 123abc
 user.age = 32
+
+logging.level.root = info
+logging.level.org.springframework.web=info
+logging.level.org.hibernate = error
