--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ user.age = 32
 logging.level.root = info
 logging.level.org.springframework.web=info
 logging.level.org.hibernate = error
+
+#spring.datasource.url = jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasouorce.password=
+#spring.jpa.database-platform=org.hibernate.dialect.h2Dialect
